# Kaleidoscope

./: .gitignore  LICENSE  build.gradle.kts  readme.md  settings.gradle.kts
buildSrc/src/main/kotlin/: Deps.kt  Project.kt
kaleidoscope/: build.gradle.kts
kaleidoscope/src/main/: AndroidManifest.xml
kaleidoscope/src/main/cpp/: CMakeLists.txt  bridge.cpp  bridge.h  declare.h  internal.cpp  internal.h  kaleidoscope.cpp  log.cpp  log.h  macro.h  mirror.cpp  mirror.h  runtime.cpp  runtime.h
kaleidoscope/src/main/cpp/bridge/: arm64.S
kaleidoscope/src/main/java/moe/aoramd/kaleidoscope/: Builder.kt  Exception.kt  Kaleidoscope.kt  Log.kt  Scope.kt
kaleidoscope/src/main/java/moe/aoramd/kaleidoscope/internal/: Bridge.kt  Method.kt  Native.kt  Record.kt  Runtime.kt
kaleidoscope/src/test/java/moe/aoramd/kaleidoscope/: BuilderTest.kt  ScopeTest.kt
test/: build.gradle.kts
test/src/androidTest/java/moe/aoramd/kaleidoscope/test/: ExampleInstrumentedTest.kt
test/src/main/: AndroidManifest.xml
test/src/main/java/moe/aoramd/kaleidoscope/test/: MainActivity.kt  MainApplication.kt  Test.java
test/src/test/java/moe/aoramd/kaleidoscope/test/: ExampleUnitTest.kt
